fixed react url issues

--- a/frontend/src/.env
+++ b/frontend/src/.env
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND="http://localhost:4000/graphql/",
+REACT_APP_BACKEND="http://localhost:8000/",
 S3_ACCESS_KEY_ID='AKIAULGZ2IWK6QVKRJBE',
 S3_SECRET_ACCESS_KEY='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'
