--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-google-autocomplete": "^2.7.3",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
+    "react-multi-carousel": "^2.8.3",
     "react-persist": "^1.0.2",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^7.2.5",
