--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -20,6 +19,7 @@
     "express-validator": "^6.14.3",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.0",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
     "stripe": "^12.0.0"
