--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jwt-decode": "^3.1.0",
-    "apollo-boost": "^0.4.9",
     "aws-sdk": "^2.995.0",
     "axios": "^0.21.4",
+    "caniuse-lite": "^1.0.30001486",
     "font-awesome": "^4.7.0",
     "google-map-react": "^2.2.0",
     "graphql": "^16.0.1",
@@ -22,7 +22,6 @@
     "jquery": "^3.6.0",
     "jwt-decode": "^2.2.0",
     "react": "^17.0.2",
-    "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.6.3",
     "react-cookie": "^4.1.1",
     "react-cookies": "^0.1.1",
@@ -52,12 +51,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  
   "browserslist": {
     "production": [
       ">0.2%",
