--- a/frontend/src/.env
+++ b/frontend/src/.env
@@ -1,3 +1,3 @@
 REACT_APP_BACKEND="http://34.217.175.58:8000/",
-S3_ACCESS_KEY_ID='AKIAULGZ2IWK6QVKRJBE',
-S3_SECRET_ACCESS_KEY='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'
+S3_ACCESS_KEY_ID='xxxxx',
+S3_SECRET_ACCESS_KEY='xxxxxxx'
